--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>https://agno94.github.io/</title><link rel="canonical" href="https://agno94.github.io/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://agno94.github.io/" /></head></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>https://agno94.github.io/</title>
+    <link rel="canonical" href="https://agno94.github.io/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://agno94.github.io/">
+  </head>
+</html>
