--- a/assistente-conto-scout/index.html
+++ b/assistente-conto-scout/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Parser Entrate CC Scout</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="https://agno94.github.io/assistente-conto-scout/favicon.png">
-    <script type="module" crossorigin="anonymous"  src="https://agno94.github.io/assistente-conto-scout/index-CcmB2cx1.js"></script>
-    <link rel="stylesheet" href="https://agno94.github.io/assistente-conto-scout/index-sBA9ry-B.css">
+    <link rel="icon" href="/assistente-conto-scout/favicon.png">
+    <script type="module" crossorigin src="/assistente-conto-scout/index-Dk-rvfuU.js"></script>
+    <link rel="stylesheet" crossorigin href="/assistente-conto-scout/index-sBA9ry-B.css">
   </head>
   <body>
     <noscript>
