deploy all pages with hugo

--- a/free-time/index.html
+++ b/free-time/index.html
@@ -7,20 +7,20 @@
     <meta http-equiv="Content-Language" content="en">
 
     <meta name="author" content="Andrea Agnolin">
-    <meta name="description" content="Scout I spend a lot of time as a scout leader (volunteer, as everyone is Italy) for the local group of AGESCI.
+    <meta name="description" content="Scout I spend a lot of time as a scout leader (volunteer) for the local group of AGESCI.
 I joined the Scout Movement as a teenager and I&rsquo;ve been a scout leader since end of 2015.
 I think the ideas of Baden Powell (as they are implemented in Italy, at least) are an effective way to train boys and girls in many aspects of life.
 No one can pass through life, any more than he can pass through a bit of country, without leaving tracks behind, and those tracks may often be helpful to those coming after him in finding their way.">
     <meta name="keywords" content="personal,person,math,analyst,developer">
 
     <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Free time"/>
-<meta name="twitter:description" content="Scout I spend a lot of time as a scout leader (volunteer, as everyone is Italy) for the local group of AGESCI.
+<meta name="twitter:description" content="Scout I spend a lot of time as a scout leader (volunteer) for the local group of AGESCI.
 I joined the Scout Movement as a teenager and I&rsquo;ve been a scout leader since end of 2015.
 I think the ideas of Baden Powell (as they are implemented in Italy, at least) are an effective way to train boys and girls in many aspects of life.
 No one can pass through life, any more than he can pass through a bit of country, without leaving tracks behind, and those tracks may often be helpful to those coming after him in finding their way."/>
 
     <meta property="og:title" content="Free time" />
-<meta property="og:description" content="Scout I spend a lot of time as a scout leader (volunteer, as everyone is Italy) for the local group of AGESCI.
+<meta property="og:description" content="Scout I spend a lot of time as a scout leader (volunteer) for the local group of AGESCI.
 I joined the Scout Movement as a teenager and I&rsquo;ve been a scout leader since end of 2015.
 I think the ideas of Baden Powell (as they are implemented in Italy, at least) are an effective way to train boys and girls in many aspects of life.
 No one can pass through life, any more than he can pass through a bit of country, without leaving tracks behind, and those tracks may often be helpful to those coming after him in finding their way." />
@@ -136,7 +136,7 @@ No one can pass through life, any more than he can pass through a bit of country
     </header>
 
     <h4 id="scout">Scout</h4>
-<p>I spend a lot of time as a scout leader (volunteer, as everyone is Italy) for the local group of AGESCI.</p>
+<p>I spend a lot of time as a scout leader (volunteer) for the local group of AGESCI.</p>
 <p>I joined the Scout Movement as a teenager and I&rsquo;ve been a scout leader since end of 2015.</p>
 <p>I think the ideas of Baden Powell (as they are implemented in Italy, at least) are an effective way to train boys and girls in many aspects of life.</p>
 <p><em>No one can pass through life, any more than he can pass through a bit of country, without leaving tracks behind, and those tracks may often be helpful to those coming after him in finding their way.</em> (B.P., 1940)</p>
@@ -150,7 +150,7 @@ moreover I also enjoying trying to do thing myself instead of relying on externa
 a recently-born association that focus on Critian-Jewish relations amoung young adults.</p>
 <p>During my university years in Padova I&rsquo;ve been a member of F.U.C.I., an association of young catholic students
 which seek to analyze and discuss matters and topics beyond their own specific curricula, with a scientific method if possibile.</p>
-<h4 id="various-reccomended-media">Various reccomended media</h4>
+<h4 id="some-media-recommendations">Some media recommendations</h4>
 <p>I have some slightly geeky/nerdy interest related to games, books, series, movies and mangas.</p>
 <p>Italian audiobook of The Silmarillion (by J.R.R. Tolkien) reccomendation: <a href="https://open.spotify.com/show/6dDj8J8upZSIgDzGDPV3GX">[link]</a></p>
 <p>Random Games recommendations:</p>
@@ -159,7 +159,7 @@ which seek to analyze and discuss matters and topics beyond their own specific c
 <li>[Card] <a href="https://en.wikipedia.org/wiki/The_Crew_(card_game)">The Crew &hellip;</a> cooperative</li>
 <li>[VideoGame] [OpenSource] <a href="https://www.wesnoth.org/">Wesnoth</a> - turn-based strategy - lots of community content</li>
 <li>[VideoGame] <a href="https://store.steampowered.com/app/1145360/Hades/">Hades</a> &amp;
-<a href="https://store.steampowered.com/app/367520/Hollow_Knight/">Hollow Knight</a> - they are the games I enjoied the most on the SteamDeck</li>
+<a href="https://store.steampowered.com/app/367520/Hollow_Knight/">Hollow Knight</a> and sequels - they are the games I enjoied the most on the SteamDeck</li>
 </ul>
 <p>Random Japanese recommendations:</p>
 <ul>
@@ -167,29 +167,20 @@ which seek to analyze and discuss matters and topics beyond their own specific c
 Manga is better and longer than the movie</li>
 <li>[Anime + Manga + Light Novel] Kusuriya No Hitorigoto a.k.a.
 <a href="https://www.crunchyroll.com/it/series/G3KHEVDJ7/the-apothecary-diaries">Apothecary Diaries</a> -
-Mistery + Historical fiction + Some crime/spy fiction + A young woman begin herself in a male-dominated society</li>
-<li>[Manga + Anime] <a href="https://www.crunchyroll.com/it/series/GEXH3WKK0/vinland-saga">Viland Saga</a> -
-Historical fiction + War + Adult themes + Very bad/harsh at the beginning, more positive outlook later</li>
-<li>[Anime Movies] Most old movies by H. Miyazaki at <a href="https://en.wikipedia.org/wiki/Studio_Ghibli#Feature_films">Studio Ghibli</a>, the latest movies by <a href="https://en.wikipedia.org/wiki/Mamoru_Hosoda#Film">M. Hosoda</a> end most movies by <a href="https://en.wikipedia.org/wiki/Makoto_Shinkai">Matoko Shinkai</a></li>
+Mistery + Historical fiction + Some crime/spy fiction + A young woman begin herself in a fedual-like society</li>
 <li><a href="https://www.crunchyroll.com/it/series/GMEHMEWZM/astra-lost-in-space">Kanata No Astra</a> -
 Crime fiction in space</li>
-<li>[Anime + Light Novel] <a href="https://www.crunchyroll.com/it/series/GMEHME51P/in-the-land-of-leadale">Leadale</a> -
-Escape and forget reality with a funny and relaxed teen girl</li>
-<li>[Anime] Cowboy Bepop (1998)/Samurai Champloo (2004)/Terror in resonance (2014) -
-all series 3 were directed by <a href="https://en.wikipedia.org/wiki/Shinichir%C5%8D_Watanabe">S. Watanabe</a>, curated soundtracks and vibes</li>
-<li>[Anime] <a href="https://en.wikipedia.org/wiki/Baccano!">Baccano!</a> or <a href="https://en.wikipedia.org/wiki/Durarara!!">Durarara</a> -
-Same author - Nonlinear narrative - Funny, mistery - Lots of characters</li>
 </ul>
-<p>Random recommendations from North-America:</p>
+<h4 id="tracks-recommendations">Tracks recommendations</h4>
+<p>Very beatiful:</p>
 <ul>
-<li>[Cartoon movies] Many cartoon directed by <a href="https://en.wikipedia.org/wiki/Don_Bluth">Don Bluth</a> (e.g. NIMH, Fievel, Anastasia)</li>
-<li>Interstellar by Nolan and Away (TV series) if you like science fiction when it&rsquo;s actually scientific
-(i.e. compatible with current scienctic knownledge)</li>
-<li>[Series] First season of <a href="https://www.netflix.com/it-en/title/80189685">The Witcher</a> (made up of short stories)</li>
-<li>Many movies by <a href="https://en.wikipedia.org/wiki/Christopher_Nolan_filmography">Christopher Nolan</a></li>
+<li><a href="https://www.komoot.com/it-it/tour/2249800729?share_token=atcX9cBGMz14zj74dXOdTw9MwxgwPx3xjAf8f5PF60HZHf9t8O">track day1 @koomot</a></li>
+<li><a href="https://www.komoot.com/it-it/tour/2249817419?share_token=aUbLz4brJap6Xda2WACE6fpEcfKx3l81apjP4nWZCnNMwKteiC">track day2 @komoot</a></li>
 </ul>
-<h4 id="tracks">Tracks</h4>
-<p>Coming&hellip;</p>
+<p>Near Padova:</p>
+<ul>
+<li><a href="https://www.komoot.com/it-it/tour/2720828772?share_token=a8nOUGgJKXzv545YWQMoMbzyvU4I47nmU81uJvGJsqiD3OLjpe">round trip @komoot</a></li>
+</ul>
 
   </article>
 </section>
