--- a/web-cv/index.html
+++ b/web-cv/index.html
@@ -127,7 +127,7 @@
     </header>
 
     <h3 id="andrea-agnolins-short-web-version-resumé">Andrea Agnolin&rsquo;s short web version resumé</h3>
-<p>Updated fall 2024</p>
+<p>Updated fall 2025</p>
 <h4 id="education">Education</h4>
 <ul>
 <li>Master Sc. degree in Mathematics at <a href="https://www.unipd.it/">Università degli Studi di Padova</a>, 2021, 108/110, Padua(IT)</li>
@@ -139,7 +139,7 @@
 </ul>
 <h4 id="work-experience">Work Experience</h4>
 <ul>
-<li>Quantitive Analyst and Full-Stack developer at <a href="https://www.phinergy.biz">Phinergy</a> 2021-2024<br>
+<li>Quantitive Analyst and Full-Stack developer at <a href="https://www.phinergy.biz">Phinergy</a> 2021-2025+
 We mainly develop SaaS integrated webapps for business customers in the energy sector.<br>
 I worked developing quantitative algorithms and the back-end infrastructure using python, mongo db and other tools;
 I worked at data visualizzation with JS tools on the front-end side;
@@ -161,12 +161,14 @@ I worked as part of a team with a workflow ispired by the agile principles and d
 </ul>
 <h4 id="computer-skills">Computer skills</h4>
 <p>Preferred programming language: Python<br>
-Preferred Operating System: Ubuntu with some customization.</p>
+Preferred Operating System: Ubuntu or Other Client Linux Systems.</p>
 <p>Other languages or frameworks ever used:<br>
 C++; LaTeX; JS &amp; most web language and formats; Bash; Pascal; PHP;
-Qt &amp; QML; Django; Jupiter, AMPL &amp; others math-related; C#; Sql &amp; mongosh.</p>
-<p>Infrastructure/Services I have some experience with:<br>
-Node.js; Cloudflare (workers, pages &amp; other); Systemd; Linux distributions in general; Docker; Git; Raspberry PI; Heroku; Openshift v2; Digital Ocean.</p>
+Qt &amp; QML; Django; AMPL &amp; others math-related; C#; Rust; sql &amp; mongosh.</p>
+<p>Infrastructure/Services/Softwares I have had some experience with:<br>
+Git; Node.js; Jupiter &amp; IPython notebooks; Uwsgi; Systemd; Linux distributions in general;
+Cloudflare (workers, pages &amp; other); Docker;
+Raspberry PI; Heroku; Openshift v2; Digital Ocean; AMQP/Rabbit.</p>
 
   </article>
 </section>
